--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 
 env:
-  AZURE_WEBAPP_NAME: <YOUR APP NAME>  # set this to your Azure web application's name
+  AZURE_WEBAPP_NAME: petclinic-afklm-ll  # set this to your Azure web application's name
   AZURE_WEBAPP_PACKAGE_PATH: ${{ github.workspace }} # this sets the path to your web app project
   JAVA_VERSION: '1.8'                
 
